# Node8

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
node8/: __init__.py  cli.py
node8/core/: __init__.py  config.py  errors.py
node8/models/: __init__.py  errors.py  noqa.py
node8/services/: __init__.py  format.py  gdscript.py  noqa.py  scene_tree.py  scenes.py  visitors.py
node8/services/rules/: __init__.py  annotations.py  anti_patterns.py  complexity.py  style_violations.py
tests/: test_foo.py
tests/src/: __init__.py  main.py
tests/testdata/test_project/: gdproject.toml  project.godot
tests/testdata/test_project/scenes/: game.tscn  player.tscn  shitty_node.tscn
tests/testdata/test_project/scripts/: player.gd  player.gd.uid  shitty_node.gd  shitty_node.gd.uid
